--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,7 +11,8 @@
  }
   
   .light{
-    background-color: white;
+    background-image: url(../images/imageBa.png);
+    background-size: cover;
     color: black;
     text-align: center;
     min-height: 100vh;
@@ -24,13 +25,12 @@
 
 .logoHeader {
  width: 100%;
- height: 200px;
+ height: 250px;
 }
 
 .menu {
   width:max-content;
   list-style: none;
-  background-color: #282c34;
   display: flex;
   gap: 95px;
   align-items: center;
@@ -41,22 +41,34 @@
   font-weight: 600;
   transition: 0.5s;
  }
+.imgHome{
+  width: 800px;
+}
+
 .listMovies{
   text-align:center;
   width:100%; 
-height: auto;
   display:flex;
-  flex-direction: row;
+  flex:auto;
+  flex-wrap: wrap;
   list-style-type:none;
+  gap: 30px;
+  margin-left: 100px;
+ 
 }
+.limovies{
+ width: 300px;
+
+}
+
 img{
-  width: 200px;
-  height: auto;
+  width: 300px;
+  height: 360px;
+  object-fit:fill;
 
 }
 .imgMovie{
-  display: flex;
-  width: 300px ;
+  
 }
 
 
@@ -75,16 +87,20 @@ img{
   color: #22c2ee;
 }
 
-.black{
-  background-color: black;
-  color: white;
+input{
+  width: 180px;
+  text-align:center ;
+  align-items: center;
 }
 .formRegister{
-  width:300px;
-	padding:16px;
+  text-align: left;
+  width:350px;
+  height: auto;
+	padding:36px;
 	border-radius:10px;
+  border: 5px solid grey;
 	margin:auto;
-	background-color:#ccc;
+	background-color:#9a7575;
   cursor:pointer;
   font-weight:bold;
 }
